--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.alibaba</groupId>
-	<artifactId>druid</artifactId>
+	<groupId>org.exam</groupId>
+	<artifactId>druid-parser</artifactId>
 	<version>1.1.23</version>
-	<packaging>jar</packaging>
 	<name>druid</name>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
